[package]
name = "psx-usb"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4"
embassy-futures = { version = "0.1.0", features = ["defmt"] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "nightly",
    "unstable-pac",
    "time-driver",
] }
embassy-time = { version = "0.1.2", features = [
    "defmt",
    "nightly",
    "generic-queue-8",
] }
embassy-usb = { version = "0.1.0", features = ["defmt"] }
fixed = "1.23"
fixed-macro = "1.2"
lilos = { version = "0.3.6", default-features = false, features = ["systick"] }
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"

[patch.crates-io]
embassy-executor = { git = "https://github.com/embassy-rs/embassy/", rev = "4d1d125f4157084668a949f9bc24e4417628f9fe" }
embassy-futures = { git = "https://github.com/embassy-rs/embassy/", rev = "4d1d125f4157084668a949f9bc24e4417628f9fe" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy/", rev = "4d1d125f4157084668a949f9bc24e4417628f9fe" }
embassy-time = { git = "https://github.com/embassy-rs/embassy/", rev = "4d1d125f4157084668a949f9bc24e4417628f9fe" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy/", rev = "4d1d125f4157084668a949f9bc24e4417628f9fe" }
lilos = { git = "https://github.com/cbiffle/lilos", rev = "b1dba11a500c4d4d57ce6915decf54ad80ed0029" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
codegen-units = 1
debug = true
lto = "fat"
