[package]
name = "psx-usb"
version = "0.1.0"
authors = ["Timo Kröger <timokroeger93@gmail.com>"]
edition = "2021"
license = "MIT/Apache-2.0"

[dependencies]
cortex-m = { version = "0.7.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7.3"
defmt = "0.3.5"
defmt-rtt = "0.4"
embassy-futures = { version = "0.1.0", features = ["defmt"] }
embassy-sync = { version = "0.2.0", features = ["defmt"] }
embassy-rp = { version = "0.1.0", features = [
    "defmt",
    "nightly",
    "unstable-pac",
    "time-driver",
] }
embassy-time = { version = "0.1.2", features = [
    "defmt",
    "nightly",
    "generic-queue-8",
] }
embassy-usb = { version = "0.1.0", features = [
    "defmt",
    "max-interface-count-8",
] }
fixed = "1.23"
fixed-macro = "1.2"
lilos = { version = "1.0.0-pre.0", default-features = false }
panic-probe = { version = "0.3", features = ["print-defmt"] }
pio = "0.2.1"
pio-proc = "0.2.2"

[patch.crates-io]
embassy-futures = { git = "https://github.com/embassy-rs/embassy/", rev = "e3cc0d168c1455d63df55f758cd875d78120f04d" }
embassy-sync = { git = "https://github.com/embassy-rs/embassy/", rev = "e3cc0d168c1455d63df55f758cd875d78120f04d" }
embassy-rp = { git = "https://github.com/embassy-rs/embassy/", rev = "e3cc0d168c1455d63df55f758cd875d78120f04d" }
embassy-time = { git = "https://github.com/embassy-rs/embassy/", rev = "e3cc0d168c1455d63df55f758cd875d78120f04d" }
embassy-usb = { git = "https://github.com/embassy-rs/embassy/", rev = "e3cc0d168c1455d63df55f758cd875d78120f04d" }
lilos = { git = "https://github.com/cbiffle/lilos", rev = "b1dba11a500c4d4d57ce6915decf54ad80ed0029" }

[profile.dev]
opt-level = "z"

[profile.release]
opt-level = "z"
codegen-units = 1
debug = true
lto = "fat"
